fix search alignment

--- a/Pickup-Phonegap/www/styles/local.css
+++ b/Pickup-Phonegap/www/styles/local.css
@@ -9,7 +9,7 @@
 }
 
 #searchgame{
-    margin-left:75px;
+    margin-left:40px;
     height: 20px;
     font-size: 16px;
     overflow: hidden;
